--- a/index.html
+++ b/index.html
@@ -1,41 +1,42 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kishtedaar - Coming Soon</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background: linear-gradient(135deg, #ffffff, #f8f8f8);
-            color: #333;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            text-align: center;
-        }
-        .container {
-            max-width: 600px;
-            padding: 20px;
-        }
-        h1 {
-            font-size: 2.5rem;
-            color: #b8860b; /* gold */
-        }
-        p {
-            font-size: 1.2rem;
-            margin-top: 10px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kishtedaar - Smart Loan & EMI Management</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #000000, #1c1c1c);
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      text-align: center;
+    }
+    h1 {
+      font-size: 3em;
+      color: #d4af37; /* Premium Gold */
+      margin-bottom: 10px;
+    }
+    p {
+      font-size: 1.2em;
+      color: #ccc;
+    }
+    .coming-soon {
+      margin-top: 20px;
+      font-size: 1.5em;
+      color: #d4af37;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Kishtedaar</h1>
-        <p>Smart Loan & EMI Management App</p>
-        <p><strong>Coming Soon...</strong></p>
-    </div>
+  <h1>Kishtedaar</h1>
+  <p>Smart Loan & EMI Management App</p>
+  <div class="coming-soon">Coming Soon...</div>
 </body>
 </html>
