--- a/index.html
+++ b/index.html
@@ -1,42 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kishtedaar - Smart Loan & EMI Management</title>
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #000000, #1c1c1c);
-      color: #fff;
+      background: linear-gradient(135deg, #000, #111);
+      color: #f5f5f5;
+    }
+    header {
+      background: #000;
+      padding: 15px 20px;
       display: flex;
-      flex-direction: column;
+      justify-content: space-between;
       align-items: center;
-      justify-content: center;
-      height: 100vh;
-      text-align: center;
     }
-    h1 {
-      font-size: 3em;
-      color: #d4af37; /* Premium Gold */
-      margin-bottom: 10px;
+    header h1 {
+      color: #d4af37; /* gold */
+      margin: 0;
     }
-    p {
-      font-size: 1.2em;
-      color: #ccc;
-    }
-    .coming-soon {
-      margin-top: 20px;
-      font-size: 1.5em;
-      color: #d4af37;
+    nav a {
+      color: #f5f5f5;
+      margin-left: 15px;
+      text-decoration: none;
       font-weight: bold;
+    }
+    .hero {
+      text-align: center;
+      padding: 100px 20px;
+    }
+    .hero h2 {
+      font-size: 2.5rem;
+      color: #d4af37;
+    }
+    .features {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 20px;
+    }
+    .features h3 {
+      color: #d4af37;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      border-top: 1px solid #333;
+      font-size: 0.9rem;
+      color: #aaa;
     }
   </style>
 </head>
 <body>
-  <h1>Kishtedaar</h1>
-  <p>Smart Loan & EMI Management App</p>
-  <div class="coming-soon">Coming Soon...</div>
+
+  <header>
+    <h1>Kishtedaar</h1>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Features</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <h2>Smart Loan & EMI Management App</h2>
+    <p>Track loans, manage EMIs & earn rewards – all in one premium app.</p>
+  </section>
+
+  <section class="features">
+    <h3>Key Features</h3>
+    <ul>
+      <li>Easy EMI Calculator</li>
+      <li>Loan Tracking & Reminders</li>
+      <li>Reward Points for Timely Payments</li>
+    </ul>
+  </section>
+
+  <footer>
+    © 2025 Kishtedaar | Coming Soon
+  </footer>
+
 </body>
 </html>
