--- a/index.html
+++ b/index.html
@@ -1,75 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kishtedaar - Smart Loan & EMI Management</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kishtedaar - Smart Loan & EMI App</title>
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #000, #111);
-      color: #f5f5f5;
+      background: linear-gradient(180deg, #000 0%, #111 100%);
+      color: white;
+      text-align: center;
     }
     header {
       background: #000;
-      padding: 15px 20px;
+      padding: 20px 10px;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      position: sticky;
+      top: 0;
     }
     header h1 {
-      color: #d4af37; /* gold */
+      color: gold;
       margin: 0;
+      font-size: 24px;
     }
     nav a {
-      color: #f5f5f5;
-      margin-left: 15px;
+      color: white;
       text-decoration: none;
-      font-weight: bold;
+      margin: 0 12px;
+      font-size: 16px;
+    }
+    nav a:hover {
+      color: gold;
     }
     .hero {
-      text-align: center;
-      padding: 100px 20px;
+      padding: 60px 20px;
     }
     .hero h2 {
-      font-size: 2.5rem;
-      color: #d4af37;
+      color: gold;
+      font-size: 28px;
+      margin-bottom: 10px;
+    }
+    .hero p {
+      font-size: 18px;
+      max-width: 500px;
+      margin: 10px auto;
+      line-height: 1.6;
     }
     .features {
-      max-width: 800px;
+      text-align: left;
+      max-width: 600px;
       margin: 40px auto;
-      padding: 20px;
+      padding: 0 20px;
     }
     .features h3 {
-      color: #d4af37;
+      color: gold;
+      font-size: 22px;
+      margin-bottom: 15px;
+    }
+    .features ul {
+      list-style: disc;
+      padding-left: 20px;
     }
     footer {
-      text-align: center;
+      margin-top: 40px;
       padding: 20px;
-      border-top: 1px solid #333;
-      font-size: 0.9rem;
+      background: #111;
+      font-size: 14px;
       color: #aaa;
     }
   </style>
 </head>
 <body>
-
   <header>
     <h1>Kishtedaar</h1>
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Features</a>
-      <a href="#">Contact</a>
+      <a href="#home">Home</a>
+      <a href="#features">Features</a>
+      <a href="#contact">Contact</a>
     </nav>
   </header>
 
-  <section class="hero">
+  <section class="hero" id="home">
     <h2>Smart Loan & EMI Management App</h2>
     <p>Track loans, manage EMIs & earn rewards – all in one premium app.</p>
   </section>
 
-  <section class="features">
+  <section class="features" id="features">
     <h3>Key Features</h3>
     <ul>
       <li>Easy EMI Calculator</li>
@@ -78,9 +97,14 @@
     </ul>
   </section>
 
-  <footer>
-    © 2025 Kishtedaar | Coming Soon
-  </footer>
+  <section class="features" id="contact">
+    <h3>Contact Us</h3>
+    <p>Email: support@kishtedaar.com</p>
+    <p>Phone: +91 98765 43210</p>
+  </section>
 
+  <footer>
+    &copy; 2025 Kishtedaar. All rights reserved.
+  </footer>
 </body>
 </html>
