--- a/index.html
+++ b/index.html
@@ -102,7 +102,18 @@
     <p>Email: support@kishtedaar.com</p>
     <p>Phone: +91 98765 43210</p>
   </section>
-
+<section class="features" id="login">
+    <h3>Login / Signup</h3>
+    <p>Select your role to continue:</p>
+    <div style="display: flex; gap: 20px; justify-content: center; margin-top: 15px;">
+      <button style="padding: 10px 20px; background: gold; border: none; border-radius: 5px; font-weight: bold; cursor: pointer;">
+        Seller Login
+      </button>
+      <button style="padding: 10px 20px; background: gold; border: none; border-radius: 5px; font-weight: bold; cursor: pointer;">
+        Customer Login
+      </button>
+    </div>
+</section>
   <footer>
     &copy; 2025 Kishtedaar. All rights reserved.
   </footer>
