--- a/index.html
+++ b/index.html
@@ -114,6 +114,33 @@
       </button>
     </div>
 </section>
+<section class="features" id="calculator">
+    <h3>EMI Calculator</h3>
+    <p>Enter your loan details to calculate EMI:</p>
+    <form onsubmit="calculateEMI(event)" style="margin-top: 15px;">
+      <label>Loan Amount (₹):</label><br>
+      <input type="number" id="amount" style="padding: 8px; width: 200px; margin: 5px;"><br>
+      <label>Interest Rate (% per annum):</label><br>
+      <input type="number" id="rate" style="padding: 8px; width: 200px; margin: 5px;"><br>
+      <label>Tenure (months):</label><br>
+      <input type="number" id="tenure" style="padding: 8px; width: 200px; margin: 5px;"><br>
+      <button type="submit" style="padding: 10px 20px; background: gold; border: none; border-radius: 5px; font-weight: bold; cursor: pointer;">
+        Calculate EMI
+      </button>
+    </form>
+    <p id="emiResult" style="margin-top: 15px; font-size: 18px; color: gold;"></p>
+  </section>
+
+  <script>
+    function calculateEMI(event) {
+      event.preventDefault();
+      let amount = parseFloat(document.getElementById('amount').value);
+      let rate = parseFloat(document.getElementById('rate').value) / 12 / 100;
+      let tenure = parseInt(document.getElementById('tenure').value);
+      let emi = (amount * rate * Math.pow(1 + rate, tenure)) / (Math.pow(1 + rate, tenure) - 1);
+      document.getElementById('emiResult').textContent = 'Your EMI: ₹' + emi.toFixed(2);
+    }
+  </script>
   <footer>
     &copy; 2025 Kishtedaar. All rights reserved.
   </footer>
