--- a/admin.html
+++ b/admin.html
@@ -1,1 +1,21 @@
-<html><body><h2>Admin Dashboard</h2></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Admin Dashboard - Kishtedaar</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Admin Dashboard</h1>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="logout.html">Logout</a>
+  </nav>
+  <section>
+    <h2>Manage Products & Sellers</h2>
+    <button onclick="alert('Add Product Feature Coming Soon')">Add Product</button>
+    <button onclick="alert('Manage Sellers Coming Soon')">Manage Sellers</button>
+  </section>
+</body>
+</html>
