--- a/seller.html
+++ b/seller.html
@@ -1,1 +1,20 @@
-<html><body><h2>Seller Dashboard</h2></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Seller Dashboard - Kishtedaar</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Seller Dashboard</h1>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="logout.html">Logout</a>
+  </nav>
+  <section>
+    <h2>Create & Manage Loans</h2>
+    <button onclick="alert('Create Loan Feature Coming Soon')">Create Loan</button>
+  </section>
+</body>
+</html>
